--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">Engineer in computer science / Full stack & mobile developer</h5>
                 <p class="mt-20">Full Stack and mobile developer, holder of a State Engineering diploma as well as a master's degree in Higher National School of Computer Science of Algiers - ESI ex INI. Currently I am continuing my studies in Master 2 at the University of Versailles – Saint-Quentin-en-Yvelines, specializing in High Performance Computing and Simulation.</br>
-                    I have skills with more than 5 programming languages, particularly in Python, C, Java and also SQL. Passionate about AI and Machine Learning in particular.</br>
+                    I have skills with more than 5 programming languages, particularly in Python, C, Java and SQL. Passionate about AI and Machine Learning in particular.</br>
                     Demonstrate a positive attitude and the willingness and motivation to learn new technologies.</p>
                 <a class="btn btn-outline-danger" href="./CV.pdf" download><i class="icon-down-circled2 "></i>View my CV</a>
             </div>
@@ -93,7 +93,7 @@
                     <li><span><B>Birthdate :</B></span> 11-02-2001</li>
                     <li><span><B>Email :</B></span> im_cherif@esi.dz</li>
                     <li style="margin-left: 55px;">mounircherif2001@gmail.com</li>
-                    <li><span><B>Address :</B></span> Bondy - France</li>
+                    <li><span><B>Address :</B></span> Paris - France</li>
                 </ul>
                 <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link" href="mailto:mounircherif2001@gmail.com"><i class="ti-email" aria-hidden="true"></i></a></li>
@@ -182,7 +182,11 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h6 class="title text-danger">2018 - Present</h6>
+                            <h6 class="title text-danger">2023 - Present</h6>
+                            <P>High Performance Computing student</P>
+                            <P class="subtitle">HPC student at UVSQ - Paris Saclay, preparing for master degree.</P>
+                            <hr>
+                            <h6 class="title text-danger">2018 - 2023</h6>
                             <P>Computer science student</P>
                             <P class="subtitle">Computer science student at ESI Algiers (ex: INI), preparing for engineer diploma + master's degree in computer science.</P>
                             <hr>
